inside routing solved

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -12,10 +12,10 @@
       <h6 class="d-inline-block">SOPA DE LETRAS</h6>
     </div>
     <div class="col-md-4 offset-md-1 text-center pt-3 fs-14 d-flex justify-content-around">
-      <p routerLink="dashboard">Dashboard</p>
-      <p routerLink="inbox">Bandeja</p>
-      <p routerLink="singles">Letra</p>
-      <p routerLink="stack">Planilla</p>             
+      <p routerLink="/dashboard">Dashboard</p>
+      <p routerLink="/inbox">Bandeja</p>
+      <p routerLink="/singles">Letra</p>
+      <p routerLink="/stack">Planilla</p>             
     </div>
   </div>
 </header>  
