adding input method

--- a/src/app/generate-singles/generate-singles.component.html
+++ b/src/app/generate-singles/generate-singles.component.html
@@ -17,21 +17,21 @@
         <div class="row">
           <div class="col-md-8 form-group input-group-sm">
             <label for="">Nombre del girador</label>
-            <input type="text" class="form-control" id="" placeholder="Ingrese aquí el nombre del girador">
+            <input type="text" class="form-control" id="" placeholder="Ingrese aquí el nombre del girador" (input)="generateTable($event)">
           </div>
           <div class="col-md-4 form-group input-group-sm">
             <label for="">Fecha de giro</label>
-            <input type="date" class="form-control" id="">
+            <input type="date" class="form-control" id="" (input)="generateTable($event)">
           </div>
         </div>
         <div class="row">
           <div class="col-md-7 form-group input-group-sm">
             <label for="">Referencia</label>
-            <input type="text" class="form-control" id="ipt-reference" placeholder="Ingrese aquí la referencia">            
+            <input type="text" class="form-control" id="ipt-reference" placeholder="Ingrese aquí la referencia" (input)="generateTable($event)">            
           </div>
           <div class="col-md-5">
             <label class="">Lugar de giro</label>
-            <select id="slct-place" class="custom-select custom-select-sm">
+            <select id="slct-place" class="custom-select custom-select-sm" (input)="generateTable($event)">
               <option selected>Seleccione lugar de giro</option>
               <option value="Miraflores">Miraflores</option>
               <option value="San Isidro">San Isidro</option>
@@ -42,15 +42,15 @@
         <div class="row">
           <div class="col-md-2 form-group input-group-sm">
             <label class="" for="ipt-quantity">Cantidad</label>
-            <input type="text" class="form-control" id="ipt-quantity">
+            <input type="text" class="form-control" id="ipt-quantity" (input)="generateTable($event)">
           </div>
           <div class="col-md-2 form-group input-group-sm">
-            <label class="" for="ipt-amount">Monto</label>
-            <input type="text" class="form-control" id="ipt-amount">
+            <label class="">Monto</label>
+            <input type="text" class="form-control" [(ngModel)]="amount" [ngModelOptions]="{standalone: true}" (input)="generateTable($event)">
           </div>
           <div class="col-md-4">
             <label class="">Frecuencia de pago</label>
-            <select id="slct-frecuency" class="custom-select custom-select-sm fs-14">
+            <select id="slct-frecuency" class="custom-select custom-select-sm fs-14" (input)="generateTable($event)">
               <option selected>Seleccione la frecuencia</option>
               <option value="15">15 días</option>
               <option value="30">30 días</option>
@@ -80,8 +80,8 @@
               <td>{{data.id}}</td>
               <td>{{data.number}}</td>
               <td>{{data.amount}}</td>
-              <td>{{data.due}}</td>
-              <td>EYE ICON</td>
+              <td>{{data.due }}</td>
+              <td><i class="fas fa-eye"></i></td>
             </tr>
           </tbody>
         </table>
@@ -92,6 +92,7 @@
           </div>
         </div>
       </div>
+       <!-- *** -->
     </div>
     <!-- right side -->
     <div class="col-md-5 border border-warning">
