--- a/src/app/generate-singles/generate-singles.component.html
+++ b/src/app/generate-singles/generate-singles.component.html
@@ -89,7 +89,7 @@
        <!-- *** -->
     </div>
     <!-- right side -->
-    <div class="col-md-5 border border-warning">
+    <div class="col-md-5">
       <input type="text" [(ngModel)]="userName">
       <p>{{ userName }}</p>
       <button type="button" class="btn btn-link border border-primary" [disabled]="userName === ''"
